k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rental-app
  labels:
    name: rental-app
