k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: rental-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: abde142/auth-service:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        
        
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: rental-app
spec:
  selector:
    app: auth-service
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
