k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: rental-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.57
        ports:
        - containerPort: 16686
          name: ui
        - containerPort: 6831
          protocol: UDP
          name: udp
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: rental-app
spec:
  selector:
    app: jaeger
  ports:
  - port: 16686
    targetPort: 16686
    name: ui
  - port: 6831
    targetPort: 6831
    protocol: UDP
    name: udp
  type: ClusterIP
