k8s/listing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-service
  namespace: rental-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: listing-service
  template:
    metadata:
      labels:
        app: listing-service
    spec:
      containers:
      - name: listing-service
        image: abde142/listing-service:latest
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
        
---
apiVersion: v1
kind: Service
metadata:
  name: listing-service
  namespace: rental-app
spec:
  selector:
    app: listing-service
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
