k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: rental-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: abde142/payment-service:latest
        ports:
        - containerPort: 8084
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /payments/health
            port: 8084
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /payments/health
            port: 8084
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: rental-app
spec:
  selector:
    app: payment-service
  ports:
  - port: 8084
    targetPort: 8084
  type: ClusterIP
